--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,26 +1,32 @@
 .login {
-  display: grid;
-  place-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  flex-direction: column;
   height: 100vh;
   width: 100%;
 }
 
-.login > div > img {
-  object-fit: contain;
-  height: 150px;
+.login__title {
+  text-align: center;
+  font-size: 64px;
+  font-family: monospace;
+  font-weight: bold;
 }
 
 .login > button {
   width: 300px;
-  height: 30px;
-  background-color: #3ea4fb;
+  height: 40px;
+  background-color: #1982FC;
   color: white;
   font-weight: 800;
   border-width: 0;
+  border-radius: 4px;
   cursor: pointer;
 }
 
 .login > button:hover {
   background-color: gainsboro;
-  color: #3ea4fb;
+  color: #1982FC;
 }
