--- a/src/components/iMessage/Chat/Chat.css
+++ b/src/components/iMessage/Chat/Chat.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   flex: 1;
   height: 100vh;
+  max-width: 100vw;
   background-color: white;
 }
 
@@ -19,6 +20,13 @@
   font-family:monospace;
   font-weight: bold;
   font-size: 16px;
+  text-align: center;
+}
+
+.bot__status > p {
+  font-family:monospace;
+  font-weight: normal;
+  font-size: 14px;
   text-align: center;
 }
 
