--- a/src/components/iMessage/Chat/Message/Message.css
+++ b/src/components/iMessage/Chat/Message/Message.css
@@ -1,5 +1,6 @@
 .message {
   display: flex;
+  max-width: 50vw;
   align-items: center;
   position: relative;
   width: fit-content;
@@ -12,8 +13,11 @@
   font-size: medium;
   padding: 15px;
   border-radius: 20px;
+  max-width: 50vw;
   margin: 10px;
   margin-right: auto;
+  word-wrap: break-word;
+
 }
 
 .message > small {
